# napi

./: .agignore  .gitignore  .gitlab-ci.yml  AUTHORS  AUTHORS.md  BUGS  BUGS.md  CHANGELOG.md  CMakeLists.txt  COLABORATION  COLABORATION.md  ChangeLog  CodingRules.md  Dockerfile  INSTALL  INSTALL.md  README  README.md  TODO.md  Vagrantfile  bosc.sh  deb_build.sh  install.sh  movies.js  movies.sh  napi.sh  napi.sh.in  napi2.sh  napi_common.sh  old_napi.sh  stary.sh  submontage.sh  subotage.sh  subotage.sh.in  test_tools.sh
___old_cruft/: Dockerfile  functional_requirements.txt  install.sh  libnapi_io.sh  libnapi_system.sh  napi.sh  napi_settings.sh  subotage.sh  verification.plan
actions/: libnapi_download.sh  libnapi_scan.sh  libnapi_search.sh  libnapi_subtitles.sh
debian/: changelog  control  copyright  napi.1  subotage.1  watch
investigation/: data.txt  resp.xml
libs/: libnapi_argv.sh  libnapi_assoc.sh  libnapi_constants.sh  libnapi_fs.sh  libnapi_hooks.sh  libnapi_http.sh  libnapi_language.sh  libnapi_logging.sh  libnapi_napiprojekt.sh  libnapi_retvals.sh  libnapi_subotage.sh  libnapi_subs.sh  libnapi_sysconf.sh  libnapi_tools.sh  libnapi_version.sh.in  libnapi_wrappers.sh  libnapi_xml.sh
manifests/: default.pp  netinstall.pp
subotage_0.15/: AUTHORS  BUGS  INSTALL  README
testcases/: 0001-collect-open-issue.patch  prepare.pl  run_tests.sh
tests/: Dockerfile-napiclient  Dockerfile-napiserver  Dockerfile-napitester  README  README.md  docker-compose.yml  prepare.pl  prepare_gcc3.sh  run_all_tests.sh  run_integration_tests.sh  run_tests.sh  test_tools.sh  (+8 more)
(+97 files in other folders)
